--- a/.github/workflows/manual-tests.yml
+++ b/.github/workflows/manual-tests.yml
@@ -49,7 +49,10 @@ jobs:
       run: |
         case "${{ github.event.inputs.test_type }}" in
           "all")
-            robot --outputdir results --include AUTH* --include MOV* --include RES* tests/api/
+            robot --outputdir results \
+                  tests/api/auth_tests.robot \
+                  tests/api/movies_tests.robot \
+                  tests/api/reservations_tests.robot
             xvfb-run -a robot --outputdir results --variable HEADLESS:true tests/web/
             ;;
           "api-auth")
